--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,6 @@ include 'kodilla-spring'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-sudoku'
+include 'kodilla-hibernate'
+include 'kodilla-hibernate'
 
