--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,6 @@ include 'kodilla-jdbc'
 include 'kodilla-sudoku'
 include 'kodilla-hibernate'
 include 'kodilla-hibernate'
+include 'kodilla-testing2'
+include 'kodilla-testing2'
 
